--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -9,14 +9,13 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">CẬP NHẬP THÔNG TIN NHÂN VIÊN!</h1>
                         </div>
-                        <form class="user" [formGroup]="StaffForm" (ngSubmit)="createStaff()">
+                        <form class="user" [formGroup]="staffForm" (ngSubmit)="updateStaff()">
                             <div class="form-group">
                                 <label> Email </label>
                                 <input type="email" [formControlName]="'email'" class="form-control form-control-user" id="email" placeholder="" disabled>
                             </div>
                             <div class="form-group">
                                 <label> Họ và tên </label>
-                                <h1>{{this.timestamp | date:'dd/MM/yyyy'}}</h1>
                                 <input type="text" [formControlName]="'name'" class="form-control form-control-user" id="name" placeholder=""  required>
                             </div>                          
                             <div class="form-group">
