--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -52,9 +52,9 @@
                                 <div class="form-control form-control-user">
                                     <select name="subject" [formControlName]="'role'">
                                         <option disabled="disabled" selected="selected">Lựa Chọn</option>
-                                        <option>Admin</option>
-                                        <option>Super Admin</option>
-                                        <option>Khách Hàng</option>
+                                        <option [value]="true">Admin</option>
+                                        <option [value]="false">Super Admin</option>
+                                        <option [value]="3">Khách Hàng</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
