--- a/src/app/admin/admin-profiles/admin-profiles.component.html
+++ b/src/app/admin/admin-profiles/admin-profiles.component.html
@@ -1,1 +1,99 @@
-<p>admin-profiles works!</p>
+<div class="container">
+    <div class="row gutters">
+    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+    <div class="card h-100">
+        <div class="card-body">
+            <div class="account-settings">
+                <div class="user-profile">
+                    <div class="user-avatar">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin">
+                    </div>
+                    <h5 class="user-name">Họ tên</h5>
+                    <h6 class="user-email">Gmail</h6>
+                </div>
+                <div class="about">
+                    <h5>About</h5>
+                    <p>'Im Yuki. Full Stack Designer I enjoy creating user-centric, 
+                        delightful and human experiences.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
+    <div class="card h-100">
+        <div class="card-body">
+            <div class="row gutters">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <h6 class="mb-2 text-primary">Thông  tin cá nhân</h6>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="fullName">Họ tên</label>
+                        <label type="text" class="form-control" id="fullName" placeholder="Enter full name" tabindex="-1"> 
+
+                        </label>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="eMail">Chức vụ</label>
+                        <label type="email" class="form-control" id="eMail" placeholder="Enter email ID" tabindex="-1"></label>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="phone">Chứng minh nhân dân - Căn cước</label>
+                        <label type="text" class="form-control" id="phone" placeholder="Enter phone number" tabindex="-1"></label>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="website">Giới tính</label>
+                        <label type="url" class="form-control" id="website" placeholder="Website url" tabindex="-1"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="row gutters">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <h6 class="mt-3 mb-2 text-primary">Địa chỉ</h6>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="Street">Ngày sinh</label>
+                        <label type="name" class="form-control" id="Street" placeholder="Enter Street" tabindex="-1"></label>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="ciTy">Địa chỉ</label>
+                        <label type="name" class="form-control" id="ciTy" placeholder="Enter City" tabindex="-1"></label>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="sTate">Email</label>
+                        <label type="text" class="form-control" id="sTate" placeholder="Enter State" tabindex="-1"></label>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+                    <div class="form-group">
+                        <label for="zIp">Số điện thoại</label>
+                        <label type="text" class="form-control" id="zIp" placeholder="Zip Code" tabindex="-1"></label>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row gutters">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                    <div class="text-right">
+                        <button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
+                        <button type="button" id="submit" name="submit" class="btn btn-primary">Update</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
