--- a/src/app/client/clients-page/shared/aside/aside.component.css
+++ b/src/app/client/clients-page/shared/aside/aside.component.css
@@ -3758,13 +3758,23 @@ figure img:hover {
 }
 
 .blog-listing .article-item .article-title {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     font-weight: 400;
-    line-height: 1.3;
+    /* line-height: 1.3; */
     margin-top: 5px;
     margin-bottom: 10px;
     color: #055699;
-    padding-right: 10px
+    /* padding-right: 10px; */
+
+    /* width: 300px; */
+    overflow: hidden; /* Ẩn đoạn text bị thừa*/
+    text-overflow: ellipsis; /*Cắt một đoạn text và thay thế bằng dấu …    */
+    /* line-height: 20px;  */
+    -webkit-line-clamp: 2; /*2 dòng*/
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+
+
 }
 
 .blog-listing .article-item .article-summary {
@@ -3777,7 +3787,7 @@ figure img:hover {
 }
 
 .blog-listing.aside .article-item .article-title {
-    font-size: 1.1rem
+    font-size: 14px
 }
 
 .the-article {
