--- a/src/app/client/profiles/article-manager/article-manager.component.css
+++ b/src/app/client/profiles/article-manager/article-manager.component.css
@@ -206,8 +206,16 @@
   }
   .table_post_listing .post_title {
     font-weight: bold;
-    font-size: 1rem;
+    /* font-size: 1rem; */
     color: #055699;
+
+    width: 300px;
+    overflow: hidden; /* Ẩn đoạn text bị thừa*/
+    text-overflow: ellipsis; /*Cắt một đoạn text và thay thế bằng dấu …    */
+    line-height: 20px; 
+    -webkit-line-clamp: 3; /*2 dòng*/
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
   }
   .table_post_listing .post_btn_toolbar .btn {
     margin-right: 5px;
