--- a/src/app/client/clients-page/shared/searchbar/searchbar.component.html
+++ b/src/app/client/clients-page/shared/searchbar/searchbar.component.html
@@ -37,30 +37,30 @@
 
                     <div class="search_field_item search_field_item_mucgia">
                         <label class="search_field_item_label">Khoảng giá</label>
-                        <select class="form-control price js_select2_price" name="price">
+                        <select class="form-control price js_select2_price" name="min" (change)="getMinPrice($event.target.value)">
                             <option value="0" selected="">Từ</option>
-                            <option value="1">1 triệu</option>
-                            <option value="2">2 triệu</option>
-                            <option value="3">3 triệu</option>
-                            <option value="4">4 triệu</option>
-                            <option value="5">5 triệu</option>
-                            <option value="10">10 triệu</option>
+                            <option value="1000000">1 triệu</option>
+                            <option value="2000000">2 triệu</option>
+                            <option value="3000000">3 triệu</option>
+                            <option value="4000000">4 triệu</option>
+                            <option value="5000000">5 triệu</option>
+                            <option value="10000000">10 triệu</option>
                         </select>
                     </div>
                         
                     <div class="search_field_item search_field_item_dientich"><label
-                            class="search_field_item_label" [ngStyle]="{'color':'yellow'}">-</label><select id="search_dientich"
-                            name="acreage" class="form-control js_select2_acreage">
+                            class="search_field_item_label" [ngStyle]="{'color':'yellow'}">-</label>
+                            <select class="form-control js_select2_acreage" name="max" (change)="getMaxPrice($event.target.value)">
                             <option value="0" selected="">Đến</option>
-                            <option value="2">2 triệu</option>
-                            <option value="3">3 triệu</option>
-                            <option value="4">4 triệu</option>
-                            <option value="5">5 triệu</option>
-                            <option value="6">6 triệu</option>
-                            <option value="8">8 triệu</option>
-                            <option value="10">10 triệu</option>
-                            <option value="20">20 triệu</option>
-                            <option value="50">50 triệu</option>
+                            <option value="2000000">2 triệu</option>
+                            <option value="3000000">3 triệu</option>
+                            <option value="4000000">4 triệu</option>
+                            <option value="5000000">5 triệu</option>
+                            <option value="6000000">6 triệu</option>
+                            <option value="8000000">8 triệu</option>
+                            <option value="10000000">10 triệu</option>
+                            <option value="20000000">20 triệu</option>
+                            <option value="50000000">50 triệu</option>
                         </select>
                     </div>
 
