--- a/src/app/client/clients-page/client-roommates/client-roommates.component.html
+++ b/src/app/client/clients-page/client-roommates/client-roommates.component.html
@@ -10,8 +10,8 @@
                 <ol class="clearfix" itemscope="" itemtype="http://schema.org/BreadcrumbList">
                     <li itemprop="itemListElement" class="first link" itemscope=""
                         itemtype="http://schema.org/ListItem"><a itemtype="https://schema.org/Thing" itemprop="item"
-                            href="https://phongtro123.com/tim-nguoi-o-ghep" title="Tìm người ở ghép"><span
-                                itemprop="name">Tìm người ở ghép</span></a>
+                           title="Tìm người ở ghép"><span
+                                itemprop="name">Tìm người ở ghép ></span></a>
                         <meta itemprop="position" content="1">
                     </li>
                     <li itemprop="itemListElement" class="link last" itemscope="" itemtype="http://schema.org/ListItem">
@@ -35,9 +35,9 @@
                             <h2 class="section-title">Tìm ở ghép</h2>
                         </div>
                         <div class="post-sort"><span>Sắp xếp: </span><a rel="nofollow" class="active"
-                                href="https://phongtro123.com/tim-nguoi-o-ghep">Mặc định</a><a rel="nofollow" class=""
-                                href="https://phongtro123.com/tim-nguoi-o-ghep?orderby=moi-nhat">Mới nhất</a><a
-                                rel="nofollow" class="" href="https://phongtro123.com/tim-nguoi-o-ghep?orderby=video">Có
+                                href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep">Mặc định</a><a rel="nofollow" class=""
+                                href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep?orderby=moi-nhat">Mới nhất</a><a
+                                rel="nofollow" class="" href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep?orderby=video">Có
                                 video</a></div>
                                 <ul class="post-listing clearfix">
                                     <li class="post-item clearfix tin-vip vipnoibat" style="border-color: #E13427;"
@@ -85,38 +85,38 @@
             <section class="section">
                 <div class="bottom-links clearfix">
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/cho-thue-phong-tro"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                                 title="Cho thuê phòng trọ, nhà trọ"><strong>Cho thuê phòng trọ</strong></a>
                         </h3>
                         <ul>
-                            <li><a href="https://phongtro123.com/tinh-thanh/ha-noi"
+                            <li><a href="https://PhongTroThanhXuan.com/tinh-thanh/ha-noi"
                                     title="Cho thuê phòng trọ, nhà trọ tại Hà Nội">Cho thuê phòng trọ Hà Nội</a></li>
                         </ul>
                     </div>
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/nha-cho-thue"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/nha-cho-thue"
                                 title="Cho thuê nhà nguyên căn"><strong>Cho thuê nhà nguyên căn</strong></a></h3>
                         <ul>
                             <li><a title="Cho thuê nhà nguyên căn tại Hà Nội"
-                                    href="https://phongtro123.com/cho-thue-nha-nguyen-can-ha-noi">Cho thuê nhà Hà
+                                    href="https://PhongTroThanhXuan.com/cho-thue-nha-nguyen-can-ha-noi">Cho thuê nhà Hà
                                     Nội</a></li>
                         </ul>
                     </div>
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/cho-thue-can-ho"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/cho-thue-can-ho"
                                 title="Cho thuê căn hộ chung cư"><strong>Cho thuê căn hộ</strong></a></h3>
                         <ul>
                             <li><a title="Cho thuê căn hộ chung cư tại Hà Nội"
-                                    href="https://phongtro123.com/cho-thue-can-ho-chung-cu-ha-noi">Cho thuê căn hộ Hà
+                                    href="https://PhongTroThanhXuan.com/cho-thue-can-ho-chung-cu-ha-noi">Cho thuê căn hộ Hà
                                     Nội</a></li>
                         </ul>
                     </div>
                     <div class="bottom-links-col">
-                        <h3 class="links-col-title"><a href="https://phongtro123.com/tim-nguoi-o-ghep"
+                        <h3 class="links-col-title"><a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep"
                                 title="Tìm người ở ghép"><strong>Tìm người ở ghép</strong></a></h3>
                         <ul>
                             <li><a title="Tìm người ở ghép tại Hà Nội"
-                                    href="https://phongtro123.com/tim-nguoi-o-ghep-ha-noi">Tìm người ở ghép Hà Nội</a>
+                                    href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep-ha-noi">Tìm người ở ghép Hà Nội</a>
                             </li>
                         </ul>
                     </div>
@@ -124,16 +124,16 @@
             </section>
             <section class="section section-whyus">
                 <div class="section-content">
-                    <h3>Tại sao lại chọn PhongTro123.com?</h3>
+                    <h3>Tại sao lại chọn PhongTroThanhXuan.com?</h3>
                     <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongtroThanhXuan.com tự hào là trang web đứng top
-                        google về các từ khóa: <a href="https://phongtro123.com/cho-thue-phong-tro"
+                        google về các từ khóa: <a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                             title="Cho thuê phòng trọ"><strong>cho thuê phòng trọ</strong></a>, <strong>nhà
-                            trọ</strong>, <a href="https://phongtro123.com/nha-cho-thue"
+                            trọ</strong>, <a href="https://PhongTroThanhXuan.com/nha-cho-thue"
                             title="Cho thuê nhà nguyên căn"><strong>thuê nhà nguyên căn</strong></a>, <a
-                            href="https://phongtro123.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho thuê căn
-                                hộ</strong></a>, <a href="https://phongtro123.com/tim-nguoi-o-ghep"
+                            href="https://PhongTroThanhXuan.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho thuê căn
+                                hộ</strong></a>, <a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep"
                             title="Tìm người ở ghép"><strong>tìm người ở ghép</strong></a>, <a
-                            href="https://phongtro123.com/cho-thue-mat-bang" title="Cho thuê mặt bằng"><strong>cho thuê
+                            href="https://PhongTroThanhXuan.com/cho-thue-mat-bang" title="Cho thuê mặt bằng"><strong>cho thuê
                                 mặt bằng</strong></a>...Vì vậy tin của bạn đăng trên website sẽ tiếp cận được với nhiều
                         khách hàng hơn, do đó giao dịch nhanh hơn, tiết kiệm chi phí hơn</p>
                     <div class="whyus-countup clearfix">
@@ -149,15 +149,15 @@
                     <h3>Chi phí thấp, hiệu quả tối đa</h3>
                     <div class="clearfix" style="display: flex; justify-content: center;"><span
                             class="star star-5"></span></div>
-                    <p class="testimonial">Trước khi biết website phongtro123, mình phải tốn nhiều công sức và chi phí
+                    <p class="testimonial">Trước khi biết website PhongTroThanhXuan, mình phải tốn nhiều công sức và chi phí
                         cho việc đăng tin cho thuê: từ việc phát tờ rơi, dán giấy, và đăng lên các website khác nhưng
-                        hiệu quả không cao. Từ khi biết website phongtro123.com, mình đã thử đăng tin lên và đánh giá
+                        hiệu quả không cao. Từ khi biết website PhongTroThanhXuan.com, mình đã thử đăng tin lên và đánh giá
                         hiệu quả khá cao trong khi chi phí khá thấp, không còn tình trạng phòng trống kéo dài - Anh
                         Khánh (chủ hệ thống phòng trọ tại Tp.HCM)</p>
                     <h3>Bạn đang có phòng trọ / căn hộ cho thuê?</h3>
                     <p>Không phải lo tìm người cho thuê, phòng trống kéo dài</p><a class="btn red"
                         style="padding: 10px 30px;" rel="nofollow"
-                        href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin ngay</a>
+                        href="https://PhongTroThanhXuan.com/quan-ly/dang-tin-moi.html">Đăng tin ngay</a>
                 </div>
             </section>
             <section class="section section-support">
@@ -174,7 +174,7 @@
                         <div class="support-item"><span class="support-item-title">Hotline 24/7</span><a rel="nofollow"
                                 href="tel:0917686101">Điện thoại: 0917686101</a><a rel="nofollow" target="_blank"
                                 href="https://zalo.me/0917686101">Zalo: 0917686101</a></div><a
-                            class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên
+                            class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên
                             hệ</a>
                     </div>
                 </div>
