--- a/src/app/client/profiles/favorites-article/favorites-article.component.html
+++ b/src/app/client/profiles/favorites-article/favorites-article.component.html
@@ -19,7 +19,7 @@
                             <li class="breadcrumb-item active" aria-current="page">Bài viết yêu thích</li>
                         </ol>
                     </nav>
-                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+                    <!-- <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                         <h1 class="h2">Bài viết yêu thích</h1>
 
                         <div class="btn-toolbar mb-2 mb-md-0">
@@ -47,7 +47,7 @@
                             <a class="btn btn-danger btn-sm d-none d-md-block" routerLink="/profile/create-article">Đăng tin mới</a>
                             <div class="d-lg-none" style="width: 100%;"><a class="btn btn-danger btn-block mt-3" routerLink="/profile/create-article">Đăng tin mới</a></div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="d-none d-md-block">
                         <div class="table-responsive">
