--- a/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,1 +1,8 @@
-<p>confirmation-dialog works!</p>
+<h1 mat-dialog-title>Xác Nhận</h1>
+<div mat-dialog-content>
+   Bạn chắc chắn?
+</div>
+<div style="float:right;margin:20px;">
+  <input style="margin:0px 10px;" type="button" value="Confirm" [mat-dialog-close]="true">
+  <input type="button" value="Cancel"  [mat-dialog-close]="false">
+</div>
